--- a/ntfy/ingress-route.yaml
+++ b/ntfy/ingress-route.yaml
@@ -7,7 +7,7 @@ metadata:
     kubernetes.io/ingress.class: traefik-internal
 spec:
   entryPoints:
-    - web
+    - websecure
   routes:
     - kind: Rule
       match: Host(`ntfy.lanjian.io`)
@@ -15,3 +15,5 @@ spec:
       services:
         - name: ntfy-service
           port: 80
+  tls:
+    secretName: lanjian-io-staging-tls
