--- a/ntfy/server.yaml
+++ b/ntfy/server.yaml
@@ -1,3 +1,3 @@
-base_url: "http://192.168.0.124/ntfy"
+base_url: "http://ntfy.lanjjian.io"
 cache-file: "/var/cache/ntfy/cache.db"
 attachment-cache-dir: "/var/cache/ntfy/attachments"
