--- a/tandoor/components/app/ingress.yaml
+++ b/tandoor/components/app/ingress.yaml
@@ -7,7 +7,7 @@ metadata:
     kubernetes.io/ingress.class: traefik-internal
 spec:
   entryPoints:
-    - web
+    - websecure
   routes:
     - kind: Rule
       match: Host(`tandoor.lanjian.io`) && PathPrefix("/media")
