--- a/ntfy/kustomization.yaml
+++ b/ntfy/kustomization.yaml
@@ -1,12 +1,15 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+
 resources:
   - deployment.yaml # deployment definition
   - svc.yaml # service connecting pods to cluster network
   - pvc.yaml # pvc used to store cache and attachment
-  - ingress-route.yaml # ingress definition
-configMapGenerator: # will parse config from raw config to configmap,it allows for dynamic reload of application if additional app is deployed ie https://github.com/stakater/Reloader
+  - ingress.yaml # ingress definition
+
+configMapGenerator:
     - name: server-config
       files: 
         - server.yaml
-namespace: default
+
+namespace: ntfy
