chore(homepage): move tailscale to bookmarks sections

--- a/homepage/base/config/bookmarks.yaml
+++ b/homepage/base/config/bookmarks.yaml
@@ -5,6 +5,9 @@
   - crates.io:
     - icon: rust.png
       href: https://crates.io
+  - tailscale:
+      icon: tailscale.png
+      href: https://login.tailscale.com/admin
 
 - Social:
   - reddit:
