fix(gitea): fix secret naming

--- a/gitea/installs/default/admin-secret.yaml
+++ b/gitea/installs/default/admin-secret.yaml
@@ -4,7 +4,7 @@ metadata:
   annotations:
     sealedsecrets.bitnami.com/namespace-wide: "true"
   creationTimestamp: null
-  name: admin-raw-secret
+  name: admin-secret
   namespace: gitea
 spec:
   encryptedData:
@@ -15,6 +15,6 @@ spec:
       annotations:
         sealedsecrets.bitnami.com/namespace-wide: "true"
       creationTimestamp: null
-      name: admin-raw-secret
+      name: admin-secret
       namespace: gitea
 
