--- a/gitea/installs/default/values.yaml
+++ b/gitea/installs/default/values.yaml
@@ -310,7 +310,7 @@ gitea:
   ## @param gitea.admin.password Password for the Gitea admin user
   ## @param gitea.admin.email Email for the Gitea admin user
   admin:
-    existingSecret: gitea-admin-secret
+    existingSecret: admin-secret
     # username: gitea_admin
     # password: r8sA8CPHD9!bt6d
     email: "jackhxs@gmail.com"
