--- a/sonarr/components/app/deployment.yaml
+++ b/sonarr/components/app/deployment.yaml
@@ -12,14 +12,14 @@ spec:
     spec:
       containers:
         - name: app
-          image: "linuxserver/radarr:4.6.4"
+          image: "linuxserver/sonarr:3.0.10"
           imagePullPolicy: Always
           envFrom:
             - configMapRef:
                 name: "app-config"
           ports:
             - name: http
-              containerPort: 7878
+              containerPort: 8989
               protocol: TCP
           volumeMounts:
             - name: data
