--- a/radarr/installs/default/kustomization.yaml
+++ b/radarr/installs/default/kustomization.yaml
@@ -7,7 +7,7 @@ namespace: "radarr"
 namePrefix: "radarr-"
 images:
   - name: "linuxserver/radarr"
-    newTag: "amd64-4.4.4"
+    newTag: "4.6.4"
 configMapGenerator:
   - name: app-config
     envs:
