--- a/certs/installs/staging/certificate.yaml
+++ b/certs/installs/staging/certificate.yaml
@@ -2,7 +2,7 @@ apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
   name: lanjian-io
-  namespace: default
+  namespace: kube-system
 spec:
   secretName: lanjian-io-staging-tls
   commonName: "*.lanjian.io"
