--- a/tandoor/installs/default/kustomization.yaml
+++ b/tandoor/installs/default/kustomization.yaml
@@ -1,8 +1,11 @@
 ---
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+
 resources:
-  - ../../base
-  - ../../components/db
-  - ../../components/app
+  - "../../base"
+  - "../../components/db"
+  - "../../components/app"
+  - "secret.yaml"
+
 namespace: tandoor
