--- a/prnotify/base/cronjob.yaml
+++ b/prnotify/base/cronjob.yaml
@@ -5,6 +5,7 @@ kind: CronJob
 metadata:
   name: cronjob
 spec:
+  suspend: true
   schedule: "*/5 * * * *"
   concurrencyPolicy: Replace
   jobTemplate:
