fix(homepage): fix config paths take 2

--- a/homepage/base/deployment.yaml
+++ b/homepage/base/deployment.yaml
@@ -38,6 +38,8 @@ spec:
               mountPath: /app/public/icons
             - name: homepage-images
               mountPath: /app/public/images
+            - name: homepage-config
+              mountPath: /app/config
             - mountPath: /app/config/custom.js
               name: homepage-config
               subPath: custom.js
