--- a/tandoor/components/app/deployment.yaml
+++ b/tandoor/components/app/deployment.yaml
@@ -31,7 +31,7 @@ spec:
         envFrom:
           - configMapRef:
               name: "tandoor-postgres-config"
-        image: vabene1111/recipes:latest
+        image: vabene1111/recipes:1.5.6
         imagePullPolicy: Always
         resources:
           requests:
