--- a/tandoor/components/app/deployment.yaml
+++ b/tandoor/components/app/deployment.yaml
@@ -92,7 +92,7 @@ spec:
             subPath: nginx-config
             readOnly: true
       - name: recipes
-        image: vabene1111/recipes:latest
+        image: vabene1111/recipes:1.5.6
         imagePullPolicy: IfNotPresent
         command:
           - /opt/recipes/venv/bin/gunicorn
