chore(palworld): update backup schedule

--- a/palworld/installs/default/app-config.env
+++ b/palworld/installs/default/app-config.env
@@ -1,11 +1,15 @@
-PUID=1000
-PGID=1000
-TZ=America/Los_Angeles
-PORT=8211
-PLAYERS=16
+BACKUP_CRON_EXPRESSION="0 5 * * *"
+BACKUP_ENABLED="true"
+COMMUNITY="false"
+DELETE_OLD_BACKUPS="true"
 MULTITHREADING=true
+OLD_BACKUP_DAYS=30
+PGID=1000
+PLAYERS=16
+PORT=8211
+PUID=1000
 RCON_ENABLED=true
 RCON_PORT=25575
-COMMUNITY="false"
-SERVER_NAME="Homeboys"
 SERVER_DESCRIPTION="Homeboys Palworld Server"
+SERVER_NAME="Homeboys"
+TZ=America/Los_Angeles
