--- a/palworld/components/app/kustomization.yaml
+++ b/palworld/components/app/kustomization.yaml
@@ -2,9 +2,16 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - pvc.yaml
+  - cronjob.yaml
   - deployment.yaml
+  - pvc.yaml
+  - role.yaml
+  - rolebinding.yaml
+  - serviceaccount.yaml
   - svc.yaml
-  #- ingress.yaml
 commonLabels:
   app.kubernetes.io/name: palworld
+configMapGenerator:
+  - name: restart-deployment
+    files:
+      - "restart-deployment.sh"
