--- a/palworld/installs/default/app-config.env
+++ b/palworld/installs/default/app-config.env
@@ -1,8 +1,9 @@
 BACKUP_CRON_EXPRESSION="0 5 * * *"
-DEATH_PENALTY="None"
 BACKUP_ENABLED="true"
 COMMUNITY="false"
+DEATH_PENALTY="None"
 DELETE_OLD_BACKUPS="true"
+ENABLE_NON_LOGIN_PENALTY="false"
 MULTITHREADING=true
 OLD_BACKUP_DAYS=30
 PGID=1000
