chore(palworld): turn off building deterioration

--- a/palworld/installs/default/app-config.env
+++ b/palworld/installs/default/app-config.env
@@ -1,5 +1,6 @@
 BACKUP_CRON_EXPRESSION="0 5 * * *"
 BACKUP_ENABLED="true"
+BUILD_OBJECT_DETERIORATION_DAMAGE_RATE=0
 COMMUNITY="false"
 DEATH_PENALTY="None"
 DELETE_OLD_BACKUPS="true"
