chore(palworld): lower egg hatching time to 2.0

--- a/palworld/installs/default/app-config.env
+++ b/palworld/installs/default/app-config.env
@@ -1,6 +1,7 @@
 BACKUP_CRON_EXPRESSION="0 5 * * *"
 BACKUP_ENABLED="true"
 BUILD_OBJECT_DETERIORATION_DAMAGE_RATE=0
+PAL_EGG_DEFAULT_HATCHING_TIME=2.0
 COMMUNITY="false"
 DEATH_PENALTY="None"
 DELETE_OLD_BACKUPS="true"
