--- a/palworld/components/app/cronjob.yaml
+++ b/palworld/components/app/cronjob.yaml
@@ -4,7 +4,7 @@ kind: CronJob
 metadata:
   name: restart-deployment
 spec:
-  suspend: false
+  suspend: true
   concurrencyPolicy:  Forbid
   schedule: "0 5 * * 2"
   jobTemplate:
