--- a/satisfactory/components/app/svc.yaml
+++ b/satisfactory/components/app/svc.yaml
@@ -11,11 +11,7 @@ spec:
       targetPort: game
       port: 7777
       protocol: UDP
-    - name: query
-      targetPort: query
-      port: 15777
-      protocol: UDP
-    - name: beacon
-      targetPort: beacon
-      port: 15000
-      protocol: UDP
+    - name: gametcp
+      targetPort: gametcp
+      port: 7777
+      protocol: TCP
