fix(jdownloader): fix secrets file naming

--- a/jdownloader/installs/default/secrets.yaml
+++ b/jdownloader/installs/default/secrets.yaml
@@ -4,7 +4,7 @@ metadata:
   annotations:
     sealedsecrets.bitnami.com/namespace-wide: "true"
   creationTimestamp: null
-  name: raw-secrets
+  name: secrets
   namespace: jdownloader
 spec:
   encryptedData:
@@ -14,5 +14,5 @@ spec:
       annotations:
         sealedsecrets.bitnami.com/namespace-wide: "true"
       creationTimestamp: null
-      name: raw-secrets
+      name: secrets
       namespace: jdownloader
