--- a/homepage/base/deployment.yaml
+++ b/homepage/base/deployment.yaml
@@ -29,6 +29,9 @@ spec:
         - name: homepage
           image: "ghcr.io/gethomepage/homepage:latest"
           imagePullPolicy: Always
+          envFrom:
+            - configMapRef:
+                name: "app-config"
           ports:
             - name: http
               containerPort: 3000
