fix: fix homepage

--- a/homepage/overlays/default/kustomization.yaml
+++ b/homepage/overlays/default/kustomization.yaml
@@ -4,6 +4,9 @@ kind: Kustomization
 resources:
   - ../../base
 
+namespace: "homepage"
+namePrefix: "homepage-"
+
 configMapGenerator:
   - name: app-config
     envs:
