fix: fix homepage take 2

--- a/homepage/overlays/default/kustomization.yaml
+++ b/homepage/overlays/default/kustomization.yaml
@@ -5,9 +5,8 @@ resources:
   - ../../base
 
 namespace: "homepage"
-namePrefix: "homepage-"
 
 configMapGenerator:
-  - name: app-config
+  - name: homepage-app-config
     envs:
       - "app_config.env"
