--- a/homepage/base/deployment.yaml
+++ b/homepage/base/deployment.yaml
@@ -31,7 +31,7 @@ spec:
           imagePullPolicy: Always
           envFrom:
             - configMapRef:
-                name: "app-config"
+                name: "homepage-app-config"
           ports:
             - name: http
               containerPort: 3000
